# eleeye

./: .gitignore  CMakeLists.txt  book.h  eleeye.cpp  evaluate.cpp  genmoves.cpp  hash.cpp  hash.h  movesort.cpp  movesort.h  position.cpp  position.h  preeval.cpp  pregen.cpp  pregen.h  search.cpp  search.h  ucci.cpp  ucci.h
